name: transient
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: GPL-3
license-file: LICENSE
maintainer: agocorona@gmail.com
category: Control
author: Alberto G. Corona
data-dir: ""

library
        build-depends: base -any, mtl -any, random -any, containers -any,
                   stm -any, HTTP -any, network -any, transformers -any
        exposed: True
        buildable: True

    exposed-modules: Transient.Base Transient.Indeterminism Transient.Backtrack 
    exposed: True
    buildable: True
    hs-source-dirs: src .

executable transient
    build-depends: base -any, mtl -any, random -any, containers -any,
                   stm -any, HTTP -any, network -any, transformers -any
    main-is: Main.hs
    buildable: True
    default-language: Haskell2010
    other-modules: Transient.Indeterminism Transient.Base Transient.Backtrack
    hs-source-dirs: src .
