name: transient
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: GPL-3
license-file: LICENSE
maintainer: agocorona@gmail.com
category: Control
author: Alberto G. Corona
data-dir: ""

executable transient
    build-depends: base -any, mtl -any, random -any, containers -any,
                   directory -any, filepath -any, stm -any, HTTP -any, network -any,
                   transformers -any
    main-is: Main.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src .
    other-modules: Transient.Indeterminism Transient.Base
                   Transient.Backtrack Transient.Move

executable move
    build-depends: base -any, mtl -any, random -any, containers -any,
                   directory -any, filepath -any, stm -any, HTTP -any, network -any,
                   transformers -any
    main-is: move.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src .
    other-modules: Transient.Indeterminism Transient.Base
                   Transient.Backtrack Transient.Move

