name: transient
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: GPL-3
license-file: LICENSE
maintainer: agocorona@gmail.com
category: Control
author: Alberto G. Corona
data-dir: ""


library
    build-depends: base , mtl , random , containers ,
                   directory , filepath , stm , HTTP , network ,
                   transformers, process

    hs-source-dirs: src .
    exposed-modules: Transient.Indeterminism Transient.Base
                   Transient.Backtrack Transient.Move

executable transient
    build-depends: base , mtl , random , containers ,
                   directory , filepath , stm , HTTP , network ,
                   transformers, transient
    main-is: Main.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs:  .


executable move
    build-depends: base , mtl , random , containers ,
                   directory , filepath , stm , HTTP , network ,
                   transformers, transient
    main-is: move.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs:  .


