name: transient


version: 0.5.2


author: Alberto G. Corona

extra-source-files:
    ChangeLog.md README.md

maintainer: agocorona@gmail.com

cabal-version: >=1.10

build-type: Simple

license: MIT
license-file: LICENSE

homepage: http://www.fpcomplete.com/user/agocorona
bug-reports: https://github.com/agocorona/transient/issues

synopsis: composing programs with multithreading, events and distributed computing
description: See <http://github.com/agocorona/transient>
             In this release distributed primitives have been moved to the transient-universe package, and web primitives have been moved to the ghcjs-hplay package.
category: Control

data-dir: ""


library
    build-depends:     base          > 4  &&  < 5
                     , containers
                     , mtl
                     , transformers
                     , stm
                     , time
                     , directory
                     , random
                     , bytestring


    exposed-modules: Transient.Backtrack
                     Transient.Base
                     Transient.EVars
                     Transient.Indeterminism
                     Transient.Internals
                     Transient.Logged

    exposed: True
    buildable: True
    exposed: True
    default-language: Haskell2010
    hs-source-dirs: src .

source-repository head
    type: git
    location: https://github.com/agocorona/transient
