name: transient
version: 0.5.8
author: Alberto G. Corona
extra-source-files:
    ChangeLog.md README.md
maintainer: agocorona@gmail.com
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE
homepage: http://www.fpcomplete.com/user/agocorona
bug-reports: https://github.com/agocorona/transient/issues
synopsis: composing programs with multithreading, events and distributed computing
description: See <http://github.com/agocorona/transient>
             Distributed primitives are in the transient-universe package. Web primitives are in the axiom package.
category: Control, Concurrency
data-dir: ""

flag debug
  description:  Enable debugging outputs
  default:      False
  manual:       True

library
    -- Note: `stack sdist/upload` will add missing bounds (via "pvp-bounds: both") in `build-depends`
    -- support GHC 7.10.3 and later; lower bounds below denote GHC 7.10.3's bundled versions
    build-depends:     base          >= 4.8.1  &&  < 5
                     , containers    >= 0.5.6
                     , transformers  >= 0.4.2
                     , time          >= 1.5
                     , directory     >= 1.2.2
                     , bytestring    >= 0.10.6

                     -- libraries not bundled w/ GHC
                     , mtl
                     , stm
                     , random

    exposed-modules: Transient.Backtrack
                     Transient.Base
                     Transient.EVars
                     Transient.Indeterminism
                     Transient.Internals
                     Transient.Logged

    exposed: True
    buildable: True
    exposed: True
    default-language: Haskell2010
    hs-source-dirs: src .
    if flag(debug)
       cpp-options: -DDEBUG

source-repository head
    type: git
    location: https://github.com/agocorona/transient

test-suite test-transient

    if !impl(ghcjs >=0.1)
        build-depends:
                       base          >= 4.8.1  &&  < 5
                     , containers    >= 0.5.6
                     , transformers  >= 0.4.2
                     , time          >= 1.5
                     , directory     >= 1.2.2
                     , bytestring    >= 0.10.6

                     -- libraries not bundled w/ GHC
                     , mtl
                     , stm
                     , random
    type: exitcode-stdio-1.0
    main-is: TestSuite.hs
    build-depends:
        base >4
    default-language: Haskell2010
    hs-source-dirs: tests src .
    ghc-options: -threaded -rtsopts
