name: transient
version: 0.6.4
author: Alberto G. Corona
extra-source-files:
    ChangeLog.md README.md
maintainer: agocorona@gmail.com
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE
homepage: https://github.com/transient-haskell/transient
bug-reports: https://github.com/transient-haskell/transient/issues
synopsis: composing programs with multithreading, events and distributed computing
description: See <http://github.com/agocorona/transient>
             Distributed primitives are in the transient-universe package. Web primitives are in the axiom package.
category: Control, Concurrency
data-dir: ""

flag debug
  description:  Enable debugging outputs
  default:      False
  manual:       True

library
--    if impl(ghcjs >=0.1)
--        build-depends:
--            ghcjs-base -any


    build-depends:      base          >= 4.8.0  &&  < 5
                        , containers    >= 0.5.6
                        , transformers  >= 0.4.2
                        , time          >= 1.5
                        , directory     >= 1.2.2
                        , bytestring    >= 0.10.6


                     -- libraries not bundled w/ GHC
                     , mtl
                     , stm
                     , random


    exposed-modules: Transient.Backtrack
                     Transient.Base
                     Transient.EVars
                     Transient.Indeterminism
                     Transient.Internals
                     Transient.Logged
                     Transient.Parse



    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src .

    ghc-options:  -O -threaded -rtsopts -Wall-missed-specialisations

    if flag(debug)
       cpp-options: -DDEBUG

source-repository head
    type: git
    location: https://github.com/agocorona/transient

test-suite test-transient

    if !impl(ghcjs >=0.1)
        build-depends:
                       base          >= 4.8.1  &&  < 5
                     , containers    >= 0.5.6
                     , transformers  >= 0.4.2
                     , time          >= 1.5
                     , directory     >= 1.2.2
                     , bytestring    >= 0.10.6

                     -- libraries not bundled w/ GHC
                     , mtl
                     , stm
                     , random


    type: exitcode-stdio-1.0
    main-is: TestSuite.hs
    build-depends:
        base >4
    default-language: Haskell2010
    hs-source-dirs: tests src .
    ghc-options:  -threaded -rtsopts
